--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,7 +15,10 @@ llm:
     model_name: "gemini-2.5-flash"
   groq:
     provider: "groq"
-    model_name: "llama-3.3-70b-versatile"
+    model_name: "openai/gpt-oss-120b"
+  openai:
+    provider: "openai"
+    model_name: "gpt-4o"
 
 tools:
   tavily:
