--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ env
 logs
 Miniconda3-latest-Linux-x86_64.sh
 Miniconda3-latest-Linux-x86_64.sh
+chroma_db
+__pycache__
+.DS_Store
+.vscode
+.idea
+.ipynb_checkpoints
